fix: profileImage on mobile

--- a/src/components/ecosystems/Home/mobile.scss
+++ b/src/components/ecosystems/Home/mobile.scss
@@ -4,7 +4,7 @@
       padding: 1.5rem 0;
     }
     #presentation{
-      img{
+      #profileImage{
         margin-right: 0;
         margin-bottom: 24px;
       }
