--- a/src/components/ecosystems/Home/style.scss
+++ b/src/components/ecosystems/Home/style.scss
@@ -12,7 +12,7 @@
     min-height: calc(100vh - 90px);
     padding: 0;
 
-    div#profileImage{
+    #profileImage{
       width: 100%;
       max-width: 400px;
       margin-right: 60px;
